--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -493,7 +493,7 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
     }
     animation: 2s alternate infinite pulseg;
 }
-.selectedModel.hexagrama-14.champModel,.phantomBanners_selected{
+.selectedModel.hexagrama-14.champModel,.phantomBanners_selected,.tsunami-selected{
     @include pulseChamp(90%,110%);
 }
 .selectedModel.hexagrama-30.unitModel{
