--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -594,7 +594,7 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
     }
 }
 
-.niaChallenge{
+.niaChallenge, .deadlyCursePanel{
     @include instaFlex;
     color:rgba(0, 0, 0, 0.911);
     text-shadow: 0 0 1vh darkorange, 0 0 1.5vh darkorange, 0 0 2vh darkorange, 0 0 2.5vh darkorange, 0 0 3vh darkorange;
@@ -604,7 +604,7 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
     z-index:10;
     margin:auto auto;
     text-align: center;
-    .niaChallengeCrest{
+    .niaChallengeCrest, .deadlyCursePanelCrest{
         width:50vw;
         height:60vh;
         font-family: $coinFont2;
@@ -658,5 +658,16 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
             justify-content: center;
             align-items: center;
         }
+    }
+}
+.deadlyCursePanelCrest{
+    .deadlyCurse.aim,.graspingCurse.dodge{
+        border-radius: 50% 30% 30% 50%;
+    }
+    .deadlyCurse.damage,.graspingCurse.walk{
+        border-radius: 30% 50% 50% 30%;
+    }
+    .deadlyCurse.confirm,.graspingCurse.confirm{
+        border-radius: 47% 47% 47% 47%;
     }
 }
