--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -2122,6 +2122,7 @@ body {
 .titusChallenge .titusChallengeCrest .selected {
   -webkit-box-shadow: inset 0 0 3vh #ff1f0f, 0 0 3vh #ff2b0f, inset 0 0 4.3vh #ff1f0f, 0 0 4.3vh #ff2b0f;
           box-shadow: inset 0 0 3vh #ff1f0f, 0 0 3vh #ff2b0f, inset 0 0 4.3vh #ff1f0f, 0 0 4.3vh #ff2b0f;
+  opacity: 1;
 }
 
 .titusChallenge .titusChallengeCrest .message {
