--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -583,6 +583,7 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
                         0 0 3vh rgb(255, 43, 15),  
                         inset 0 0 4.3vh rgb(255, 31, 15), 
                         0 0 4.3vh rgb(255, 43, 15);
+            opacity:1;
         }
         .message{
             width:100%; 
